static-xml-derive/tests/ui/field-not-parsetext.stderr
error[E0277]: the trait bound `Foo: ParseText` is not satisfied
  --> tests/ui/field-not-parsetext.rs:10:5
   |
8  | #[derive(Deserialize)]
   |          ----------- this tail expression is of type `&mut Foo`
9  | struct Outer {
10 |     foo: Foo,
   |     ^^^^^^^^ the trait `ParseText` is not implemented for `Foo`
   |
   = help: the following other types implement trait `ParseText`:
             String
             bool
             f32
             f64
             i128
             i16
             i32
             i64
           and $N others
   = note: required for `Foo` to implement `Deserialize`
   = note: required for `Foo` to implement `DeserializeElementField`

error[E0277]: the trait bound `Foo: ParseText` is not satisfied
  --> tests/ui/field-not-parsetext.rs:10:5
   |
10 |     foo: Foo,
   |     ^^^^^^^^ the trait `ParseText` is not implemented for `Foo`
   |
   = help: the following other types implement trait `ParseText`:
             String
             bool
             f32
             f64
             i128
             i16
             i32
             i64
           and $N others
   = note: required for `Foo` to implement `Deserialize`
   = note: required for `Foo` to implement `DeserializeElementField`
